# zeroserve

./: .gitignore  AGENTS.md  CADDY_COMPAT.md  Cargo.toml  Dockerfile.dist  README.md  build.rs
.codex/skills/zeroserve-script-create/: SKILL.md
.codex/skills/zeroserve-script-create/references/: examples.md  sdk_api.md
.github/workflows/: ci.yml
benchmark/memory/: benchmark.py  memory_benchmark.md
benchmark/routing/: RESULTS.md  benchmark.py  ci_matrix.py  results.jsonl
docs/: iroh_reverse_proxy_design.md  user_manual.md
examples/: acme.c  call_greeter.c  connection_info.c  health_response.c  infinite_loop.c  log_request.c  reverse_proxy.c  template.c
plugins/: io.su3.aws-sigv4.c
sdk/: zeroserve.h  zeroserve_caddy.h
src/: boringtls.rs  bpf_compiler.rs  caddy_compile.rs  caddy_file.rs  caddy_run.rs  cli.rs  config.rs  hupwatch.rs  iroh_proxy.rs  ja4.rs  json.rs  logging.rs  main.rs  oidc.rs  pack.rs  pool.rs  ratelimit.rs  reload.rs  script.rs  script_compile.rs  server.rs  shared.rs  site.rs  thread_pool.rs  tinycc.rs  tls.rs
src/acme/: challenge.rs  client.rs  config.rs  http.rs  jose.rs  mod.rs  store.rs
src/caddyfile/: address.rs  dispenser.rs  grammar.lalrpop  import.rs  lexer.rs  mod.rs  parser.rs  token.rs  toks.rs
src/caddyfile/adapter/: handlers.rs  matchers.rs  mod.rs  options.rs
src/ech/: config.rs
src/helpers/: aws_sign.rs  caddy.rs  call.rs  compress.rs  crypto.rs  encoding.rs  generic.rs  json.rs  mod.rs  oidc.rs  ratelimit.rs  response.rs
src/http/: h1.rs
src/server/: caddy.rs
testing/: acme_test.ts  aws_sigv4_test.ts  body_json_test.ts  body_streaming_test.ts  caddy_compile_test.ts  caddy_e2e_compare_test.ts  caddyfile_test.ts  deno.json  hostname_validation_test.ts  oidc_test.ts  rate_limit_test.ts  scripting_test.ts  tarball_test.ts  test_utils.ts  tls_client_cert_test.ts  url_sanitization_test.ts  zeroserve_call_test.ts
testing/caddyfile_fixtures/: README.md  bare.caddy  combined.caddy  control_flow.caddy  fileserver.caddy  globals.caddy  handle.caddy  headers.caddy  heredoc.caddy  matchers.caddy  multisite.caddy  paths.caddy  redir.caddy  reverseproxy.caddy  rewrite.caddy  runtime_handlers.caddy  simple.caddy  snippet.caddy  vars_map.caddy
tests/: iroh_proxy_e2e.rs
tools/: caddyfile_golden.py
