[package]
name = "zeroserve"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"

[dependencies]
arc-swap = "1"
async-ebpf = { path = "../async-ebpf" }
bytes = "1"
caps = "0.5"
futures = "0.3"
monoio = { version = "0.2", default-features = false, features = ["async-cancel", "bytes", "iouring", "utils", "sync"] }
monoio-http = { version = "0.3" }
monoio-rustls = { version = "0.4" }
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "logging", "aws_lc_rs"] }
anyhow = "1"
http = "1"
io-uring = "0.6"
landlock = "0.4"
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.5", features = ["all"] }
struson = { version = "0.6", features = ["serde"] }
ulid = "1"
url = "2"
webpki-roots = "0.26"
moka = { version = "0.12", features = ["future"] }
signal-hook = "0.3"
tar = "0.4"

[patch.crates-io]
monoio = { git = "https://github.com/bytedance/monoio", rev = "212fde187f3d41f65ecd35b9cac80f7e246bb58e" }
