[package]
name = "zeroserve"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"

[dependencies]
arc-swap = "1"
async-ebpf = "0.2"
# async-ebpf = { path = "../async-ebpf" }
base64ct = "1"
blake3 = "1"
bytes = "1"
caps = "0.5"
faster-hex = "0.10"
futures = "0.3"
monoio = { version = "0.2", default-features = false, features = ["async-cancel", "bytes", "iouring", "utils", "sync"] }
monoio-rustls = { version = "0.4" }
clap = { version = "4", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "logging", "aws_lc_rs"] }
anyhow = "1"
hmac = "0.12"
http = "1"
io-uring = "0.6"
landlock = "0.4"
libc = "0.2"
mini-moka = { version = "0.10", default-features = false }
nix = { version = "0.30", features = ["mount", "event"] }
parking_lot = "0.12"
rand = "0.8"
rayon = "1.11"
rlimit = "0.10"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = { version = "0.5", features = ["all"] }
struson = { version = "0.6", features = ["serde"] }
ulid = "1"
url = "2"
webpki-roots = "0.26"
moka = { version = "0.12", features = ["future"] }
tar = "0.4"

[patch.crates-io]
monoio = { git = "https://github.com/bytedance/monoio", rev = "212fde187f3d41f65ecd35b9cac80f7e246bb58e" }
