[package]
name = "zeroserve"
version = "0.2.12-alpha.4"
edition = "2024"

[profile.release]
panic = "abort"

[build-dependencies]
cc = "1"
lalrpop = "0.23"

[dependencies]
lalrpop-util = "0.23"
arc-swap = "1"
chrono = "0.4"
async-ebpf = "0.4.0-alpha.5"
base64ct = { version = "1", features = ["alloc"] }
dashmap = "6"
blake3 = "1"
bytes = "1"
caps = "0.5"
faster-hex = "0.10"
futures = "0.3"
h2 = "0.4"
monoio = { version = "0.2", default-features = false, features = ["async-cancel", "bytes", "iouring", "poll-io", "utils", "sync", "macros", "mkdirat", "unlinkat", "renameat"] }
monoio-compat = "0.2"
boring = "5"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
argon2 = "0.5.3"
bcrypt = "0.19.1"
hmac = "0.12"
http = "1"
idna = "1"
io-uring = "0.6"
libc = "0.2"
mini-moka = { version = "0.10", default-features = false }
nix = { version = "0.30", features = ["mount", "event", "fs"] }
parking_lot = "0.12"
rand = "0.8"
rayon = "1.11"
rlimit = "0.10"
scopeguard = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
socket2 = { version = "0.5", features = ["all"] }
struson = { version = "0.6", features = ["serde"] }
ulid = "1"
url = "2"
moka = { version = "0.12", features = ["future"] }
tar = "0.4"
chacha20poly1305 = "0.10"
serde_vici = "0.1.5"
flate2 = "1.1.9"
zstd = "0.13.3"

[patch.crates-io]
monoio = { git = "https://github.com/bytedance/monoio", rev = "212fde187f3d41f65ecd35b9cac80f7e246bb58e" }
